--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,14 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <a id="scroll-top"></a>
+
     <script src="%PUBLIC_URL%/javascript/jquery.min.js"></script>
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+      crossorigin="anonymous"
+    ></script>
     <script src="%PUBLIC_URL%/javascript/plugins.js"></script>
     <script src="%PUBLIC_URL%/javascript/jquery-ui.js"></script>
     <script src="%PUBLIC_URL%/javascript/owl.carousel.min.js"></script>
