--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/stylesheet/responsive.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/stylesheet/mobile-menu.css" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Zubair Float</title>
+    <title>SellrApp demo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
